Submission for project grade

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Day Trip Generator</title>
 </head>
 <body>
-    <script type="application/javascript" script src="daytrip-script.js"></script>
+    <script src="daytrip-script.js"></script>
 </body>
 </html>
